<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="prefs_toolbar_show_task_mgr_button">Show TaskManager button</string>
    <string name="prefs_gesture_manage_list">Manage gestures:</string>
    <string name="prefs_gesture_min_score">Minimal score to recognize:</string>
    <string name="prefs_gestures">Gestures</string>
    <string name="prefs_toolbar_show_gesture_button">Show gesture button</string>
    <string name="prefs_toolbar_show_desktop_switcher_button">Show DesktopSwitcher button</string>
    <string name="prefs_wallpaper_changer_change_on_start_summary">Change the wallpaper immediately when service starts.</string>
    <string name="prefs_wallpaper_changer_change_on_start">Change on start</string>
    <string name="wallpaper_changer_service_label">myHome Wallpaper Changer Service</string>
    <string name="prefs_wallpaper_changer_duration">Switch duration</string>
    <string name="prefs_wallpaper_changer_active">Activate</string>
    <string name="prefs_wallpaper_changer_title">Wallpaper Changer</string>
    <string name="prefs_desktop_rotation_summary">Switch from the last desktop to the first and reverse</string>
    <string name="prefs_desktop_rotation">Desktop rotation</string>
    <string name="toolbar_show_contacts_button">Show Contacts button</string>
    <string name="prefs_toolbar_show_caller_button">Show Call button</string>
    <string name="prefs_toolbar_title">Toolbar</string>
    <string name="prefs_default_desktop_num">Default desktop</string>
    <string name="prefs_num_desktops_title">Number of desktops</string>
    <string name="prefs_desktop_prefs">Desktop Settings</string>
    <string name="prefs_title">myHome Settings</string>
    <string name="wallpaper_changer_title">Select Wallpaper</string>
    <string name="wallpaper_chooser_no_images">Sorry, there are no images at /sdcard/myHome/wallpaper.</string>
    <string name="action_menu_entry_wallpaper_changer">Wallpaper Changer</string>
    <string name="action_menu_entry_wallpaper">Set Wallpaper</string>
    <string name="action_menu_entry_widget">Add Widget</string>
    
    <string name="app_name">myHome</string>
<string name="myPlacesDesktop">Desktop</string>
<string name="myPlacesAllApps">All apps</string>
<string name="no_vacant_cells">Sorry, not enough free space on the desktop!</string>
<string name="menu_entry_settings">Settings</string>
<string name="dialog_title_add_place">Name your MyPlace</string>
<string name="dialog_button_ok">Ok</string>
<string name="dialog_button_cancel">Cancel</string>
<string name="dialog_button_add">Add</string>
<string name="menu_entry_add_place">Add MyPlace</string>
<string name="fatal_crash_message">MyHome crashed last time.\nI\'m sorry about that.\nDo you want to send me an EMail with the (automatically filled in) details?\nThis is very useful :)</string>
<string name="fatal_crash_title">Fatal Crash</string>
<string name="dialog_title_uninstall">Uninstall</string>
<string name="dialog_message_uninstall">Do you really want to uninstall this application?</string>
<string name="dialog_title_rm_place">Remove MyPlace</string>
<string name="dialog_message_rm_place">Do you really want to remove this MyPlace?</string>
<string name="CrashReport_MailSubject">Crash of MyHome</string>
<string name="CrashReport_MailBody">Error</string>
<string name="error_desktop_full">This desktop is already full!</string>
<string name="collecting_error_trace">Collecting error trace. Please be patient.</string>
<string name="loading_please_wait">Loading...\nPlease be patient :)</string>
<string name="loading_done">Loading done.\nHave fun :)</string>
<string name="menu_entry_restore_desktop">Restore Desktop</string>
<string name="dialog_title_restore_desktop">Restoring desktop</string>
<string name="dialog_message_restore_desktop">Are you shure you want to restore your desktop?\nThis will remove all items from your desktop and replace them with the ones saved each time this app is in background.</string>
<string name="menu_entry_myhome_settings">myHome Settings</string>
<string name="dialog_restart_title">Restarting application</string>
<string name="dialog_restart_message">When changing this preferences, the application has to be re-started.</string>
<string name="menu_entry_restart_desktop">Restart</string>
<string name="prefs_wallpaper_changer_backgrounds_dialog_title">Wallpapers</string>
<string name="prefs_wallpaper_changer_backgrounds_summary">Selected wallpapers to switch between</string>
<string name="wallpaper_changer_backgrounds_title">Wallpaper selection</string>
<string name="menu_entry_switch_background">Switch Wallpaper</string>
<string name="menu_entry_screenshot">Screenshot</string>
<string name="screenshot_error">Sorry, I could not take screenshot.</string>
<string name="screenshot_success">Screenshot is at /sdcard/myHome/screenshot.png.</string>
<string name="pick_gesture_shortcut_title">Pick gesture shortcut</string>
<string name="gesture_shortcut_created">Created gesture for:</string>
<string name="gesture_unknown_action">Sorry, I could not start the assigned action.</string>
<string name="gesture_action_call">Calling</string>
<string name="gesture_action_main">Opening</string>
<string name="extra_group_applications">Applications</string>
<string name="dialog_remove_gesture_message">Are you shure you want to remove the gesture?:</string>
<string name="dialog_remove_gesture_title">Remove gesture</string>
<string name="prefs_gesture_settings">Gesture settings</string>
<string name="gesture_action_sendto">Sending SMS to</string>
<string name="intent_action_main">Open</string>
<string name="intent_action_call">Call </string>
<string name="intent_action_sendto">SMS to</string>
<string name="folder_no_content">Sorry, no content here.</string>
<string name="task_mgr_close_task_title">Kill Task</string>
<string name="task_mgr_close_task_message">Do you really want to close the application?:</string>
</resources>
